moved all 32 bit providers to chainloading

--- a/metadata/md5-cache/app-eselect/eselect-library-0.1
+++ b/metadata/md5-cache/app-eselect/eselect-library-0.1
@@ -1,10 +1,10 @@
 DEFINED_PHASES=install
 DEPEND=app-admin/eselect
-DESCRIPTION=Library switching module for eselect
+DESCRIPTION=runtime library switching module for eselect
 EAPI=7
-HOMEPAGE=https://wiki.gentoo.org/wiki/No_homepage
+HOMEPAGE=https://github.com/bsd-ac/gentoo-blas-lapack
 KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sparc ~x86
 LICENSE=GPL-2
 RDEPEND=app-admin/eselect
 SLOT=0
-_md5_=0c776d2f6428dba616d78345052fc70a
+_md5_=0b49107f36d72c1aae44854602e6ee77
