--- a/app-eselect/eselect-library/files/library.eselect-0.1
+++ b/app-eselect/eselect-library/files/library.eselect-0.1
@@ -34,6 +34,18 @@ validate_libdir() {
 	return 1
 }
 
+### managed action
+describe_managed() {
+	printf "show libraries currently managed with eselect library\n"
+}
+
+do_managed() {
+	write_list_start "Managed libraries:"
+	local libs
+	libs=( "${EROOT}"/etc/env.d/eselect-library/* )
+	write_numbered_list -m "(none found)" "${libs[@]##*/}"
+}
+
 ### show action
 describe_show() {
 	printf "print the current active <libname> implementation\n"
@@ -120,7 +132,7 @@ describe_validate_parameters() {
 }
 
 describe_validate_options() {
-	printf "libname: library for which to validate implementations for (eg. blas, lapack64)\n"
+	printf "libname: library for which to validate implementations (eg. blas, lapack64)\n"
 }
 
 do_validate() {
@@ -298,20 +310,24 @@ do_unset() {
 }
 
 ### add action
+describe_add() {
+	printf "Add a provider for the <libname> library\n"
+}
+
 describe_add_parameters() {
-	printf "<libname> <libdir> <dir> <impl>\n"
+	printf "<libname> <libdir> <dir> <provider>\n"
 }
 
 describe_add_options() {
 	printf "libname: library for which we are eselecting alternatives (eg. blis, blas)\n"
-	printf "libdir : library directory where <libname> implementation is installed (lib, lib64, etc.)\n"
-	printf "dir    : directory containing lib<libname>.so[.x[.y[.z]]]\n"
-	printf "impl   : name of the <libname> provider\n"
+	printf "libdir: library directory where <libname> implementation is installed (lib, lib64, etc.)\n"
+	printf "dir: directory containing lib<libname>.so[.x[.y[.z]]]\n"
+	printf "provider: name of the <libname> provider\n"
 }
 
 do_add() {
 	[[ $# -eq 4 ]] \
-		|| die -q "Please specify <libname> <libdir> <dir> <impl> to activate!"
+		|| die -q "Please specify <libname> <libdir> <dir> <provider> to activate!"
 	validate_libdir $1 $3 || die -q "invalid library provider!"
 	store_config ${EROOT}/etc/env.d/eselect-library/$1/$2/$4 LDPATH $3
 }
