--- a/metadata/md5-cache/app-eselect/eselect-library-0.1
+++ b/metadata/md5-cache/app-eselect/eselect-library-0.1
@@ -4,7 +4,7 @@ DESCRIPTION=runtime library switching module for eselect
 EAPI=7
 HOMEPAGE=https://github.com/bsd-ac/gentoo-blas-lapack
 KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sparc ~x86 ~amd64-linux ~x86-linux
-LICENSE=GPL-2
+LICENSE=ISC
 RDEPEND=app-admin/eselect
 SLOT=0
-_md5_=07de8883bbb669125cc1a35a43cc95c1
+_md5_=578e02848ca9a0ba5a6ee82e3921c341
