--- a/README
+++ b/README
@@ -19,11 +19,15 @@ very simple technique to link any library (or set of libaries) as a provider.
 
 ## Disadvantages
 
+none that are evident
+
+##### INCORRECT - dlopen works 
 - Breaks false promises of `dlopen` on these libraries.
 
 This is actually not something that we are breaking specifically at this point.   
 This problem already happens if we use Intel MKL-RT as the *provider* library,
 as doing a `dlopen` on that already causes symbol resolution errors.
+##### INCORRECT //
 
 ## Testings
 
@@ -43,7 +47,9 @@ any provider selected - eselect library unset blas
 
 ## Future work
 
+##### IT IS NO LONGER NEEDED
 - Can we do a function redirection to the appropriate libraries, without a dlopen ?
   [Flexiblas](https://github.com/mpimd-csc/flexiblas/) does something similar but
   that is overkill for our simple problem.
-  Does there exist some linker magic
+  Does there exist some linker magic?
+##### IT IS NO LONGER NEEDED //
