--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 # Gentoo BLAS/LAPACK chain loading
 
-**This is highly experimental.**
+**This is still a bit experimental.**
 
 ## Overview
 
@@ -16,18 +16,11 @@ very simple technique to link any library (or set of libaries) as a provider.
 
 - Very simple eclass to register a provider
 - No fiddling around with sources to find exact speficications
+- Allows using Intel MKL as a BLAS/LAPACK provider
 
 ## Disadvantages
 
 none that are evident
-
-##### INCORRECT - dlopen works 
-- Breaks false promises of `dlopen` on these libraries.
-
-This is actually not something that we are breaking specifically at this point.   
-This problem already happens if we use Intel MKL-RT as the *provider* library,
-as doing a `dlopen` on that already causes symbol resolution errors.
-##### INCORRECT //
 
 ## Testings
 
@@ -44,12 +37,3 @@ DEBUG directory and do - make run.
 There should be a noticeable difference in the run time after doing a switch
 using eselect library set blas <openblas/mkl> as opposed to when you do not have
 any provider selected - eselect library unset blas
-
-## Future work
-
-##### IT IS NO LONGER NEEDED
-- Can we do a function redirection to the appropriate libraries, without a dlopen ?
-  [Flexiblas](https://github.com/mpimd-csc/flexiblas/) does something similar but
-  that is overkill for our simple problem.
-  Does there exist some linker magic?
-##### IT IS NO LONGER NEEDED //
